// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvalancheAuthProvider authenticate 1`] = `"0x92d414fa574ea420dae28a58454aaed02cab50ff2c13f0af728cfd15e4816ca5"`;

exports[`AvalancheAuthProvider createLink 1`] = `
Object {
  "account": "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:43113",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe 
Timestamp: 0",
  "signature": "0xe84fcb7b7aa7ca303e0db8008af549cddc55be485b0374a6ba260369ce2e753111c7b03f0a0cdf7c164bc99711ba012abb1d63447d6e168d121ffd3ca5e8d3441b",
  "timestamp": 0,
  "type": "ethereum-eoa",
  "version": 2,
}
`;

exports[`authenticate correctly sign auth message 1`] = `"0xcf54e7560501fa53e3f7092672a920c346034ba93d001919f0cb5445851b5685"`;

exports[`createLink create erc1271 proof correctly 1`] = `
Object {
  "account": "0xbe6c27620b271dd76f1787cdef1f4375cff3fa1f@eip155:43113",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe",
  "signature": "0x9feb4c429a673415edb63f42b5a302b669b2e479e3b44d4ac41ec7f09d53d6494063bf53dddaed16c1d229ca4cb0841b2360d52777289c57ba539c1ddff9144f1b",
  "type": "erc1271",
  "version": 2,
}
`;

exports[`createLink create ethereumEOA proof correctly 1`] = `
Object {
  "account": "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:43113",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe",
  "signature": "0x9feb4c429a673415edb63f42b5a302b669b2e479e3b44d4ac41ec7f09d53d6494063bf53dddaed16c1d229ca4cb0841b2360d52777289c57ba539c1ddff9144f1b",
  "type": "ethereum-eoa",
  "version": 2,
}
`;

exports[`createLink throw if erc1271 is on wrong chain 1`] = `[Error: ChainId in provider (43113) is different from AccountID (12345)]`;
